lmfdb/templates/style.css
{# template defs #}

{%- macro BORDER_RADIUS(R) -%}
  border-radius: {{R}}px;
{%- endmacro -%}

{# end defs #}

img { border: 0; }

body {
    margin: 0px;
    padding: 0px;
    font-family: sans-serif;
    color: {{color.body_text}};
    background-color: {{color.body_background}};
}
td.title {
    color: {{color.box_tab_text}};
}
h2.link > a {
    color: {{color.box_tab_text}};
}
.katex {
    font-size: 1em !important;
}
/* TODO: where is content?*/
#content > h1, #content > div.narrow-body > h1
{
    font-size: 130%;
    font-weight: bold;
    color: {{ color.content_text }};
    font-family: sans-serif;
    text-decoration: none;
    margin: 15px 0;
}
#content > h1:first-of-type,
#content > h2:first-of-type {
    margin-top: 0px;
    padding-top: 2px;
}

#content > h2
{
    font-family: sans-serif;
    text-decoration: none;
    font-size: 120%;
    text-align: left;
    font-weight: bold;
    color: {{color.a_text}};
    padding: 5px 0;
    margin: 10px 0;
}
#content > h3, td.table_h2 {
    font-family: sans-serif;
    text-decoration: none;
    font-size: 110%;
    text-align: left;
    font-weight: bold;
    padding: 5px 0 5px 0;
    color: {{color.a_text}};
    margin: 10px 0 5px 0;
}

#content > h2 a[knowl], #content > h3 a[knowl] {
    color: {{color.col_main}};
}

#content p {
  padding-left: 1ch;
}

#content ul {
  padding-left: 24px;
}

#content > h2.inline,
#content > h3.inline {
    font-weight: normal;
    display: inline;
    padding-right: 10px;
    margin: 5px 0 10px 0;
}

div.narrow-body {
  max-width:700px;
}

#footer {
    clear: both;
    margin-top: 20px;
    background-color: {{color.footer_background}};
    padding-top: 6px;
    padding-bottom: 10px;
    text-align: center;
    font-size: 75%;
    color: {{color.footer_text}};
}

#content > ul {
    margin-top: 10px;
    margin-bottom: 10px;
}

/* Body links, sidebar links, and sidebar header text. */
a {
    color: {{color.col_link}};
    text-decoration: none;
    font-family: sans-serif;
}

a[knowl] {
    color: {{color.col_a_knowl}};
}

a.inactive {
    color: {{color.a_inactive}};
}

a.inactive:hover {
    background: inherit;
}

table tbody tr.trivial {
    color: {{color.grey}};
}

table tbody tr.trivial a {
    color: {{color.grey}};
}
table tbody tr.trivial a:hover {
    color: inherit;
    background: inherit;
}

#content a {
}
#content .announce {
  font-size: 1.2em;
  padding: 10px 20px;
  margin: 20px 0px;
  border-left: 3px solid {{ color.content_border }};
  background: {{ color.content_background }};
  line-height: 1.5em;
}
#content .announce.red {
    border-left: 3px solid {{color.content_border_red}};
    background: {{color.content_background_red}};
}

/*
#search-topright {
  display: inline;
}
#search-topright input {
  font-size: 75%;
  border: 1px solid {{ color.search_border }};
  padding: 1px;
  background: {{color.search_background}} ;
  position: relative;
  top: -1px;
}
*/

/* icon in front of external links */
#content a[target="_blank"]:before {
  content: url("static/images/url-ext.gif");
  padding-right: 2px;
}

span.disable-links {
  pointer-events: none;
}

a:visited { color: {{color.a_text_visited}}; }
a:hover {
    color: {{color.a_text_hover}};
    background: {{color.a_background_hover}};
}

#logo a, #logo a:hover, body.knowl #logo a:hover {
  background: none;
}

#header {
  background: {{color.header_background}};
}

body.knowl #header {
  background: {{ color.knowl_l }};
}

#header #logo {
    display: inline-block;
    margin: 0px;
    padding-top: 8px;
    padding-left: 46px;
}
#header #logo img {
    max-height: 50px;
}
#header .right {
    margin-top: 0px;
    display: inline-block;
    padding-left: 60px;
    vertical-align: top;
    width: calc(100% - 210px);
}
#header #title {
    font-size: 180%;
    font-weight: bold;
    font-family: sans-serif;
    padding-bottom: 2px;
    color: {{color.header_text_title}};
}

#header #title .katex{
    font-weight: bold !important;
}

#header .bread {
    font-family: sans-serif;
    font-size: 90%;
    display: inline-block;
}

#header .bread a:first-child {
    font-size: 150%;
}

#header .bread a {
    color: {{color.bread_links}};
}

#header .topright {
  text-align: right;
  white-space:nowrap;
  font-family: sans-serif;
  font-size: 90%;
  padding-top: 8px;
  padding-right: 5px;
  display: inline-block;
  float: right;
  clear: both;
  color: {{color.header_text_topright}};
}
#header .topright a {
    color: {{color.header_text_topright}};
}
#header .topright #communication-wrapper {
  display: none;
  padding: 4px;
}
#header .undertopright {
  text-align: right;
  white-space:nowrap;
  font-family: sans-serif;
  float: right;
  color: {{color.header_text_topright}};
}
#header .undertopright a {
    color: {{color.header_text_topright}};
}
#header .undertopright:first-child {
    margin-top: 0;
}

#header #navi {
  white-space: nowrap;
  text-align: right;
  color: {{color.header_navi_text}};
  font-family: sans-serif;
  font-size: 90%;
  padding: 2px 5px;
  position: absolute;
  bottom: 0px;
  right: 0px;
  z-index: 5;
}

/* TODO: what? */
#flashes p {
  border-left: 15px solid {{color.knowl_border}};
  padding: 5px;
  background: {{color.knowl_background}};
}

#flashes p.error {
  margin: 15px 0;
  font-size: 95%;
  border: 0;
  border-left: 15px solid {{color.flashes_border}};
  background: {{color.flashes_background}};
}

#flashes p.success {
  border-left: 15px solid #43664a;
  background: #e3fde8;
}

#main {
  margin:  0px 0px 0px 184px;
  padding: 0px 0px 0px 10px;
  min-height:600px;
}

.debug {
    background: #FF9;
    font-style: italic;
}

body > .debug {
    margin: 10px 20px 20px 200px;
    padding: 5px;
}
/* ... */

